Add Post Update Swagger UI
